<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>legged_hunter_controllers</name>
  <version>0.0.0</version>
  <description>Controller configurations and launch files for legged_hunter robot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>legged_hunter_description</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
